fix z-index and add hover and focus

--- a/src/sass/components/_header-mob-menu.scss
+++ b/src/sass/components/_header-mob-menu.scss
@@ -31,10 +31,17 @@ a {
   right: 21px;
   top: 60px;
   margin-bottom: 32px;
-
+  cursor: pointer;
   @media screen and (min-width: 1280px) {
     display: none;
   }
+}
+
+.header-menu-btn :hover,
+.header-menu-btn :focus {
+  border: none;
+  border-radius: 22px;
+  background-color: #ecebeb;
 }
 
 .mob-menu-item {
@@ -68,7 +75,18 @@ a {
   position: absolute;
   top: 23px;
   right: 27px;
+  cursor: pointer;
+  fill: #ffffff;
+  &:hover,
+  &:focus {
+    fill: #d41443;
+  }
 }
+
+// .menu-close-btn :hover,
+// .menu-close-btn :focus {
+//   fill: #d41443;
+// }
 
 .is-hidden {
   opacity: 0;
