--- a/src/sass/layout/_hero-header.scss
+++ b/src/sass/layout/_hero-header.scss
@@ -120,6 +120,8 @@
 
 .header-buy-btn :hover,
 .header-buy-btn :focus {
+  border: none;
+  border-radius: 22px;
   background-color: #ecebeb;
 }
 
@@ -282,13 +284,25 @@
   text-align: center;
   color: #d41443;
   // color: $text-title-color;
-
+  // &:hover,
+  // &:focus {
+  //   border: none;
+  //   border-radius: 24px;
+  //   background-color: #ecebeb;
+  // }
   @media screen and (min-width: 1280px) {
     width: 138px;
     height: 40px;
     font-size: 14px;
     line-height: calc(18 / 14);
   }
+}
+
+.header-btn_how :hover,
+.header-btn_how :focus {
+  border: none;
+  border-radius: 24px;
+  background-color: #ecebeb;
 }
 
 .header-btn_block {
